Fix to template to clear dewar from correct position

--- a/templates/dewars.html
+++ b/templates/dewars.html
@@ -123,6 +123,9 @@
                     if ( json['status'] == 'ok' ) {
                         let frequency = 600;
                         playOscillator(context.currentTime, context.currentTime + 0.2, frequency);
+                        // Why does this care what dewar id is?
+                        // Need to change this as we don't get the id back from synchweb but we get 
+                        // the dewartransporthistory instead
                         if ( json['dewarid'] > 0 ) {
                             playOscillator(context.currentTime + 0.4, context.currentTime + 0.6, frequency);
                             playOscillator(context.currentTime + 0.8, context.currentTime + 1, frequency);
@@ -138,7 +141,7 @@
             
         function _clearOne() {
             // Clear all barcodes
-            position = '{{rack_prefix}}'+$('.clearDewar').html();
+            position = '{{rack_prefix}}'+'-'+$('.clearDewar').html();
             console.log("clearing "+position);
             $.ajax({
                 url: '/{{api_prefix}}/dewars',
