Added js, css dependencies into repo

--- a/templates/vue-dewars.html
+++ b/templates/vue-dewars.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"/>
+    <link rel="stylesheet" href="/static/css/bulma/0.7.1//bulma.min.css"/>
     <!-- development version, includes helpful console warnings -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script src="/static/js/vue/2.5.17/vue.min.js"></script>
+    <script src="/static/js/axios/0.18.0/axios.min.js"></script>
 </head>
 
 <body class="has-background-white-ter">
