Added note to vdewars app - allow use of facility code

--- a/templates/vue-dewars.html
+++ b/templates/vue-dewars.html
@@ -21,7 +21,7 @@
         <h2 class="title has-text-centered">Scan Dewar and Rack</h2>
         <form>
           <div class="field">
-            <label>Barcode</label>
+            <label>Barcode or FacilityCode</label>
               <div class="control">
                 <input type="text" class="input" v-model="barcode" placeholder="Scan the long barcode from the dewar case">        
               </div>
