Added error handling for losing database connection

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,18 @@
                 <p>Dewar Management Application for use within Zone 6</p>
                 <a href="/zone6/">Zone 6</a>
             </div>
+            <div class="ui-body ui-body-a ui-corner-all">
+                <p>New Dewar Management Application for use within Zone 6</p>
+                <a href="/zone6/vdewars">Zone 6</a>
+            </div>
             <h3 class="ui-bar ui-bar-a ui-corner-all">Stores</h3>
             <div class="ui-body ui-body-a ui-corner-all">
                 <p>Dewar Management Application for use within Stores</p>
                 <a href="/stores/">Stores</a>
+            </div>
+            <div class="ui-body ui-body-a ui-corner-all">
+                <p>New Dewar Management Application for use within Stores</p>
+                <a href="/stores/vstores">Stores</a>
             </div>
             <h3 class="ui-bar ui-bar-a ui-corner-all">eBIC</h3>
             <div class="ui-body ui-body-a ui-corner-all">
